# musicbender-discord

./: .gitignore  Cargo.toml  Makefile  Musicbender.sln  README.md  effects.js  effects.json  music.js  settings.js  settings.json
JSON/: effects.json  settings.json
Musicbender/: Musicbender.csproj  Program.cs
Musicbender/Data/: Effect.cs  EffectQueue.cs  Strings.cs
Musicbender/Handlers/: CommandHandler.cs  DatabaseHandler.cs  EffectHandler.cs  EnforcementHandler.cs  MessageEventHandler.cs
Musicbender/Helpers/Commands/: ArgumentRenderer.cs  CommandExecutionHelper.cs  CommandStore.cs
helpers/: effects.js  settings.js
src/: main.rs
src/commands/: test.rs
src/helpers/: commands_provider.rs  credentials_helper.rs  mod.rs  unrecognised_input.rs
systemd/: musicbender.service
