[package]
name = "Musicbender"
version = "0.0.1"
authors = ["tanish2k09 <tanish2k09.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"

[target.'cfg(unix)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]
