[package]
name = "musicbender"
version = "0.0.1"
authors = ["tanish2k09 <tanish2k09.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio  = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"

[dependencies.serenity]
version = "0.9.0-rc.2"
default-features = true

[target.'cfg(unix)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]

